--- a/1890.md
+++ b/1890.md
@@ -29,3 +29,5 @@
 - **Alfred Nobel Establishes the Nobel Prizes**: **Alfred Nobel**, the inventor of dynamite, sets up the **Nobel Prize fund**, rewarding future contributions to science, literature, and peace.  
 
 1890 was a **pivotal year** in **early computing, electricity, transportation, and photography**, setting the stage for the **technological advancements of the 20th century**.
+
+[🔙 Back to Timeline](README.md)
