--- a/1930.md
+++ b/1930.md
@@ -36,3 +36,5 @@
 - **Albert Einstein and Leó Szilárd Propose the Idea of Nuclear Fission**: The early theoretical groundwork for **nuclear energy** begins, leading to future advancements in nuclear power and atomic research.  
 
 1930 was a **transformative year**, with **early computing, aviation advancements, the rise of radio and TV, and innovations in food and photography**, laying the foundation for **modern technology and culture**.
+
+[🔙 Back to Timeline](README.md)
