--- a/1955.md
+++ b/1955.md
@@ -36,3 +36,5 @@
 - **First Ultra-Sonic Remote Control for TVs Introduced**: Zenith improves its **TV remote technology**, leading to **modern infrared and RF remotes**.  
 
 1955 was a **transformative year**, with **AI officially named, Disneyland opening, nuclear energy expanding, and Silicon Valley emerging**, shaping **technology, entertainment, and global innovation**.
+
+[🔙 Back to Timeline](README.md)
