--- a/1960.md
+++ b/1960.md
@@ -40,3 +40,5 @@
 - **Electronic Banking Takes Shape**: The first experiments in **electronic fund transfers (EFTs)** lay the groundwork for **ATMs and online banking**.  
 
 1960 was a **transformational year**, with major advancements in **AI, space exploration, lasers, satellite communication, and computing**, setting the stage for **the digital and space revolutions** of the 20th century.
+
+[🔙 Back to Timeline](README.md)
