--- a/1975.md
+++ b/1975.md
@@ -33,3 +33,5 @@
 - **The Rise of the Video Game Industry**: **Pong home consoles**, developed by Atari, gain widespread popularity, marking the beginning of the **home gaming industry**.  
 
 1975 was a **pivotal year**, with the **birth of Microsoft, personal computing, Ethernet, and digital photography**, setting the stage for the **technological revolution** of the late 20th century.
+
+[🔙 Back to Timeline](README.md)
