--- a/1982.md
+++ b/1982.md
@@ -37,3 +37,5 @@
 - **The ARPANET Officially Adopts TCP/IP**: The transition to **TCP/IP** protocol begins on **ARPANET**, the foundation of the **modern internet**.  
 
 1982 was a **landmark year**, with major advancements in **personal computing, video game culture, artificial intelligence, and digital media**, setting the stage for **the tech revolution of the 80s and beyond**.
+
+[🔙 Back to Timeline](README.md)
