--- a/1984.md
+++ b/1984.md
@@ -31,3 +31,5 @@
 - **The First Dot-Com Domain is Registered**: **Symbolics.com** becomes the first **.com domain**, marking the early days of **commercial internet use**.  
 
 1984 was a **defining year** in **personal computing, cyberpunk literature, video games, and mobile technology**, shaping the **future of digital culture and innovation**.
+
+[🔙 Back to Timeline](README.md)
