--- a/1992.md
+++ b/1992.md
@@ -36,3 +36,5 @@
 - **Nokia Becomes a Major Player in Mobile Phones**: Nokia releases **GSM mobile phones**, helping to **globalize mobile communication**.  
 
 1992 was a **transformational year**, with the **rise of the first smartphone, Windows 3.1, JPEG images, and the early graphical web**, setting the stage for **modern computing and the internet revolution**.
+
+[🔙 Back to Timeline](README.md)
