--- a/1995.md
+++ b/1995.md
@@ -38,3 +38,5 @@
 - **DVD Format Finalized**: The **DVD (Digital Versatile Disc)** format is agreed upon, promising **higher-quality video and more storage** than VHS and CDs.  
 
 1995 was a **groundbreaking year**, marking the **rise of the internet, e-commerce, and multimedia computing**, laying the foundation for the digital revolution of the late 1990s and beyond.
+
+[🔙 Back to Timeline](README.md)
