--- a/1998.md
+++ b/1998.md
@@ -42,3 +42,5 @@
 - **Napster Development Begins**: **Shawn Fanning** begins coding **Napster**, an early peer-to-peer **music-sharing platform** that would disrupt the music industry.  
 
 1998 was a **pivotal year**, with the **rise of Google, Windows 98, the iMac, and digital media**, shaping the future of **search engines, e-commerce, and entertainment**.
+
+[🔙 Back to Timeline](README.md)
